# browser-task-copilot

./: README.md  pyproject.toml
assets/: README.md
configs/: runtime.example.yaml
demo/input/: task-approval.json  task-denied.json  task-readonly.json
demo/output/: demo-summary.json  replay-approval-final.json  replay-approval-initial.json  replay-denied-initial.json  replay-readonly-initial.json  task-approval-create.json  task-approval-final.json  task-denied-create.json  task-readonly-create.json
docs/: architecture.md  azure-foundry.md  demo-flow.md  execution-matrix.md  implementation-plan.md  policy-spec.md
examples/: approval-event.json  replay-record.json  task-create.json  task-result.json
policies/: default-policy.yaml  high-risk-policy.yaml
scripts/: run_live_demo.py
src/browser_task_copilot/: azure_planner.py  config.py  main.py  models.py  planner.py  policy.py  service.py  store.py
tests/: test_approval_timeout.py  test_policy_engine.py  test_task_lifecycle.py
